kubernetes/deployments/pythonapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: python
          image: aade/pymin:0.0.0 # {"$imagepolicy": "flux:pythonapp"}
          ports:
            - containerPort: 80
          resources: 
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi

---
apiVersion: v1
kind: Service
metadata:
  name: py-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: python
