kubernetes/deployments/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-ingress
spec:
  rules:
  - host: py.10-0-10-10.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-svc
            port:
              number: 80
  ingressClassName: nginx
